--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,7 @@ jobs:
         os:
           - ubuntu-latest
           - ubuntu-24.04-arm
+          - windows-latest
 
     runs-on: ${{ matrix.os }}
 
